Added movisense data preprocessing

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -15,14 +15,7 @@
    "source": [
     "# TRR 265\n",
     "\n",
-    "> This module handle's analysis of the TRR265 data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "stub: To get started, download all the required data. Into the following folder structures:"
+    "> This module handles analysis of the TRR265 data."
    ]
   },
   {
@@ -66,21 +59,220 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataProvider' object has no attribute 'get_two_day_data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/16/2wxbnpk5321f8g40bxf0ht_h0000gn/T/ipykernel_84713/2255965172.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtrr265\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_provider\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataProvider\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataProvider\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/hilmarzech/Projects/trr265/trr265/data/'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Path to data folder (containing raw, interim, external, and processed)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_two_day_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataProvider' object has no attribute 'get_two_day_data'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>participant</th>\n",
+       "      <th>date</th>\n",
+       "      <th>MDBF_zufrieden</th>\n",
+       "      <th>g_alc</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two_day_index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-07</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-03-12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              participant       date  MDBF_zufrieden  g_alc\n",
+       "two_day_index                                              \n",
+       "0                    b001 2020-02-22             NaN    6.4\n",
+       "1                    b001 2020-02-23             NaN   35.2\n",
+       "2                    b001 2020-02-24             2.0    NaN\n",
+       "3                    b001 2020-02-25             NaN    NaN\n",
+       "4                    b001 2020-02-26             NaN    NaN\n",
+       "5                    b001 2020-02-27             NaN    NaN\n",
+       "6                    b001 2020-02-28             NaN    NaN\n",
+       "7                    b001 2020-02-29             NaN    NaN\n",
+       "8                    b001 2020-03-01             NaN    NaN\n",
+       "9                    b001 2020-03-02             NaN    NaN\n",
+       "10                   b001 2020-03-03             NaN    NaN\n",
+       "11                   b001 2020-03-04             NaN    NaN\n",
+       "12                   b001 2020-03-05             NaN    0.0\n",
+       "13                   b001 2020-03-06             NaN   57.6\n",
+       "14                   b001 2020-03-07             3.0    NaN\n",
+       "15                   b001 2020-03-08             NaN    NaN\n",
+       "16                   b001 2020-03-09             NaN    NaN\n",
+       "17                   b001 2020-03-10             NaN    NaN\n",
+       "18                   b001 2020-03-11             NaN    NaN\n",
+       "19                   b001 2020-03-12             NaN    NaN"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#%load_ext autoreload\n",
+    "#%autoreload 2\n",
     "from trr265.data_provider import DataProvider\n",
     "dp = DataProvider('/Users/hilmarzech/Projects/trr265/trr265/data/') # Path to data folder (containing raw, interim, external, and processed)\n",
-    "dp.get_two_day_data().iloc[:20]"
+    "dp.get_two_day_data().iloc[:20][['participant','date','MDBF_zufrieden','g_alc']]"
    ]
   }
  ],
