--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -40,20 +40,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!pip install trr265"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -273,6 +259,37 @@
     "from trr265.data_provider import DataProvider\n",
     "dp = DataProvider('/Users/hilmarzech/Projects/trr265/trr265/data/') # Path to data folder (containing raw, interim, external, and processed)\n",
     "dp.get_two_day_data().iloc[:20][['participant','date','MDBF_zufrieden','g_alc']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Required data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Phone screening\n",
+    "- data/external/b7_participants.xlsx <- from Hilmar\n",
+    "- data/raw/phonescreening.csv <- from redcap\n",
+    "- data/external/phone_codebook.html <- from redcap\n",
+    "\n",
+    "### Basic assessment (from redcap)\n",
+    "- data/raw/ba.csv <- from redcap\n",
+    "- data/external/ba_codebook.html <- from redcap\n",
+    "\n",
+    "### Movisens\n",
+    "- all basic assessment data (see above)\n",
+    "- data/raw/mov_data_b.csv\n",
+    "- data/raw/mov_data_d.csv\n",
+    "- data/raw/mov_data_m.csv\n",
+    "- data/raw/starting_dates_b.csv\n",
+    "- data/raw/starting_dates_d.csv\n",
+    "- data/raw/starting_dates_m.csv\n",
+    "- data/external/alcohol_per_drink.csv <- from Hilmar"
    ]
   }
  ],
