removed biur requirement

--- a/notebooks/_03_gbe.wm.ipynb
+++ b/notebooks/_03_gbe.wm.ipynb
@@ -8,7 +8,7 @@
     "# Working memory task\n",
     "\n",
     "<div>\n",
-    "    <p align=\"left\"><img src=\"../images/wm_task.png\" width = '200px'> \n",
+    "    <p align=\"left\"><img src=\"images/wm_task.png\" width = '200px'> \n",
     "        <ol style=\"padding-left:240px\">\n",
     "        <li>Participants are presented with patterns that they have to reproduce.</li>\n",
     "        <li>Three trial types:\n",
@@ -29,6 +29,86 @@
     "   \n",
     "    \n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a5264be-f4fb-482b-b82f-06ca7d82e97b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "from trr265.gbe import GBEProvider"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "087b1ee1-14bb-4128-b4c4-e70382748f38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp = GBEProvider('/Users/hilmarzech/Projects/trr265/trr265/data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc68f9ad-d269-4055-86f3-3add51c8ede9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dp.get_efficiently\n",
+    "def get_initial_filtered_wm_data():\n",
+    "    '''This function preprocesses the working memory data.\n",
+    "    Note that this function already filters out participants that failed level 2 on any condition and participants that completed the wrong game.\n",
+    "    '''\n",
+    "    df = dp.get_gbe_baseline_data() # ToDo: add sample variable (\"initial\" vs. \"replication\")\n",
+    "    df = df[df.initial] # For now, we only look at the initial dataset\n",
+    "    df = df[df['WorkingMemoryGame'].isnull()==False]\n",
+    "    df = dp.decode_gbe_strings(df, \"WorkingMemoryGame\")\n",
+    "    df['success'] = df.success.astype(int)\n",
+    "    specs = get_wm_trial_specifications()\n",
+    "    df = df.merge(specs,on='trialid',validate='many_to_one').sort_values(by=['participant','baseline_session','trial_index']).reset_index(drop = True)\n",
+    "    df['trial_number'] = df.groupby(['participant','baseline_session','type']).cumcount()+1\n",
+    "    df['is_even'] = (df.trial_number+1)%2\n",
+    "    ## Filtering variables of interest\n",
+    "    wm_vars = [\"timestarted\", \"timesubmitted\", \"success\", \"timetaken\", \"trialid\",\"trial_number\", \"trialrot\",\"is_even\",\"pattern\",\"level\",\"type\",\"boards\"]\n",
+    "    df = df[['mov_index','gbe_index','gbe_baseline_index','initial','trial_index','participant','baseline_session']+wm_vars]\n",
+    "    # Filtering out participants that used an old version of the GBE\n",
+    "    is_sequential = (df.set_index('participant')['type']=='sequential').reset_index().groupby('participant').max()\n",
+    "    wrong_game_pps = list(is_sequential[is_sequential.type].index)\n",
+    "    print(\"%d participants used the wrong version of the game.\"%len(wrong_game_pps))\n",
+    "    df = df[df.participant.isin(wrong_game_pps)==False]\n",
+    "    # Filtering out participants that failed level two\n",
+    "    failed_level_two = df.query(\"(level==2) and (success==0)\").gbe_baseline_index.unique()\n",
+    "    print(\"%d sessions are excluded because participants failed on a level two trial of any condition.\"%len(failed_level_two))\n",
+    "    df = df[df.gbe_baseline_index.isin(failed_level_two)==False]\n",
+    "    # Fixing the duplicated no distractor condition\n",
+    "    df['type'] = df.type.replace({\"no_distractor_1\":\"no_distractor\",\"no_distractor_2\":\"no_distractor\"})\n",
+    "    type_repetitions = df[df.type.str.contains('no')].groupby(['participant','baseline_session']).apply(fix_game)\n",
+    "    type_repetitions.index.name = \"\"\n",
+    "    df['type_repetition'] = type_repetitions['type_repetition']\n",
+    "    df.type_repetition.fillna(\"\",inplace = True)\n",
+    "    df['type'] = df.type + df.type_repetition\n",
+    "    df.drop(columns = 'type_repetition', inplace = True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9371457f-8108-4bf4-9ded-cbb36d317b9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WMTask():\n",
+    "    def __init__(self, dp):\n",
+    "        self.dp = dp\n",
+    "        \n",
+    "wm_task = WMTask(dp)"
    ]
   },
   {
