Added working memory preprocessing and scoring

--- a/notebooks/01_data_provider.ipynb
+++ b/notebooks/01_data_provider.ipynb
@@ -81,7 +81,7 @@
     "    \"\"\"\n",
     "    def w(*args, update = False, columns = None, path = None, **kw):\n",
     "        _self = args[0] # Getting self to grab interim path from DataProvider\n",
-    "        var_name = func.__name__.replace('get_','')\n",
+    "        var_name = func.__name__.replace('__get_','').replace('get_','')\n",
     "        file_path = os.path.join(_self.interim, \"%s.parquet\"%var_name)\n",
     "        if os.path.exists(file_path) and (update == False):\n",
     "            result =  pd.read_parquet(file_path, columns = columns)\n",
@@ -435,7 +435,8 @@
    "id": "94a2d1da-ddd7-49e4-a6fe-5d6c293a3ca0",
    "metadata": {},
    "source": [
-    "### Getting baseline data"
+    "### Getting baseline data\n",
+    "> Warning: This function does not work if the computers default encoding is not UTF-8 -> This should be adjusted in pd.readhtml..."
    ]
   },
   {
