Added biuR to install instructions

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -29,7 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install trr265`"
+    "`pip install trr265`\n",
+    "\n",
+    "`pip install biuR` (optional but needed for most analyses)"
    ]
   },
   {
