Added first reliability analyses

--- a/notebooks/04_gbe.wm.scoring-Copy1.ipynb
+++ b/notebooks/04_gbe.wm.scoring-Copy1.ipynb
@@ -16,29 +16,11 @@
    "metadata": {},
    "source": [
     "# Working memory task - Scoring\n",
-    "\n",
-    "<div>\n",
-    "    <p align=\"left\"><img src=\"images/wm_task.png\" width = '200px'> \n",
-    "        <ol style=\"padding-left:240px\">\n",
-    "        <li>Participants are presented with patterns that they have to reproduce.</li>\n",
-    "        <li>Three trial types:\n",
-    "            <ul>\n",
-    "                <li>No distractor (this condition is duplicated)</li>\n",
-    "                <li>Encoding distractor (distractor shown at the same time as pattern)</li>\n",
-    "                <li>Delayed distractor (distractor shown after pattern disappears)</li>\n",
-    "            </ul>\n",
-    "        </li>\n",
-    "        <li>For each trial type, participants first complete a pattern of three.</li>\n",
-    "            <ul>\n",
-    "                <li>If they fail they move to two, if they fail again the game finishes.</li>\n",
-    "                <li>For each condition the level increases with success.</li>\n",
-    "                <li>Condition ends when two consecutive wrong or 8 trials completed (implies maximum score of 10)</li>\n",
-    "            </ul>\n",
-    "    </ol>\n",
-    "    \n",
-    "   \n",
-    "    \n",
-    "</div>"
+    "Here we calculate different scores for the working memory task.  We calculate each score for each condition:\n",
+    "- No distractor 1\n",
+    "- No distractor 2 (the same condition with less time for encoding)\n",
+    "- Encoding distractor\n",
+    "- Delay distractor"
    ]
   },
   {
@@ -66,6 +48,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
@@ -90,14 +73,6 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "import biuR.wrapper"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "87fe1c8e-a3fe-4107-a4c7-75362a76eef2",
-   "metadata": {},
-   "source": [
-    "## This is a test"
    ]
   },
   {
@@ -1133,19 +1108,6 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "#def get_perc_correct_predicted_sep_trial_r(df):\n",
-    "#    %R -i df\n",
-    "#    %R library(lmerTest)\n",
-    "#    %R library(ggeffects)\n",
-    "#    # Running the model\n",
-    "#    %R control=glmerControl(optimizer = \"bobyqa\", optCtrl=list(maxfun=1e6))\n",
-    "#    %R m = glmer(implied_success ~ 1 + (1 | participant/session), data=df, family=binomial, control = control, na.action = na.exclude)\n",
-    "#    # Extracting predicted values\n",
-    "#    %R p = ggpredict(m, terms=c(\"participant\",\"session\"), type=\"re\",ci.lvl = NA)\n",
-    "#    %R -o p\n",
-    "#    return p\n",
-    "\n",
-    "#export\n",
     "def get_perc_correct_predicted_sep_trial_r(df):    \n",
     "    R = biuR.wrapper.R()\n",
     "    p = R(\"\"\"\n",
@@ -1257,20 +1219,6 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "#def get_perc_correct_predicted_joint_r(df):\n",
-    "#    %R -i df\n",
-    "#    %R library(lmerTest)\n",
-    "#    %R library(ggeffects)\n",
-    "#    # Running the model\n",
-    "#    %R control=glmerControl(optimizer = \"bobyqa\", optCtrl=list(maxfun=1e6))\n",
-    "#    %R m = glmer(implied_success ~ 1 + trial_type + (1 + trial_type | participant/session), data=df, family=binomial, control = control, na.action = na.exclude)\n",
-    "#    # Extracting predicted values\n",
-    "#    %R p = ggpredict(m, terms=c(\"participant\",\"session\",\"trial_type\"), type=\"re\",ci.lvl = NA)\n",
-    "#    %R p = as.data.frame(p)\n",
-    "#    %R -o p\n",
-    "#    return p\n",
-    "\n",
-    "\n",
     "def get_perc_correct_predicted_joint_r(df):    \n",
     "    R = biuR.wrapper.R()\n",
     "    p = R(\"\"\"\n",
@@ -1387,8 +1335,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def correl(df):\n",
     "    df_corr = pd.DataFrame() # Correlation matrix\n",
     "    df_p = pd.DataFrame()  # Matrix of p-values\n",
