--- a/notebooks/03_gbe.wm.data_provider.ipynb
+++ b/notebooks/03_gbe.wm.data_provider.ipynb
@@ -15,7 +15,8 @@
    "id": "d6508e09-e6f8-4b26-89fb-42145ab3abcf",
    "metadata": {},
    "source": [
-    "# Working memory task"
+    "# Working memory task\n",
+    "Here, we load the working memory task data into a dataframe for further processing."
    ]
   },
   {
