--- a/notebooks/01_data_provider.ipynb
+++ b/notebooks/01_data_provider.ipynb
@@ -262,7 +262,7 @@
     "    dd_screeners = clean_screeners(dd_screeners)\n",
     "    \n",
     "    b07_screeners = ['ann-kathrin stock','charlotte blum','josephine kirschgens','klara macht','borchardt','marta ledro','miriam petasch','mona hofmann','theo tester']\n",
-    "    s01_screeners = ['esther preuschhof', 'miriam schmitz', 'sebastian möricke', 'jessica zimmermann', 'leonard visser', 'anna-lena lünert', 'anne dörfler', 'dominic reichert', 'maike borchardt', 'dorothee scheuermann', 'paula böhlmann', 'alice']\n",
+    "    s01_screeners = ['esther preuschhof', 'miriam schmitz', 'sebastian möricke', 'jessica zimmermann', 'leonard visser', 'anna-lena lünert', 'anne dörfler', 'dominic reichert', 'maike borchardt', 'dorothee scheuermann', 'paula böhlmann', 'alice','josephine kirschgens maxi stiller', 'maria schießl', '22.10.2021', 'sascha', '03.08.2021', 'mariana plumbohm', 'caroline neumer', '04.08.2021', 'maxi stiller', 'sacsha', '09.08.2021', 'ml', 'charlotte', 'charlotte heinze']\n",
     "    known_dd_screeners = list(b07_screeners+s01_screeners)\n",
     "    dd_screeners = df[(df.center=='d')&(df.screen_caller.isna()==False)].screen_caller.unique()\n",
     "    # Checking if all Dresden phone screeners are accounted for\n",
@@ -405,7 +405,7 @@
     "       'test002', 'test003', 'test004', 'test005', 'test01', 'test02',\n",
     "       'test03', 'test0722', 'test1', 'test34', 'test999', 'test2020',\n",
     "       'test20201', 'test345345', 'testt', 'test_10', 'test_11_26',\n",
-    "       'test_neu', 'xx956']\n",
+    "       'test_neu', 'xx956','050262', '050335', '050402', '050416', '051005', '294932', '891752080', '898922719', '898922899', '917702419', '01627712983', 'meow', 'test0022', 'test246', 'test5647', 'test22222', 'test41514', 'testtt', 'test_057', 'tets']\n",
     "    df = df[~df.participant_id.astype(str).isin(remove)]\n",
     "\n",
     "    bad_ids = df[~df.participant_id.apply(self.check_participant_id)].participant_id.unique()\n",
@@ -523,7 +523,7 @@
     "        df[new_id].fillna('nan',inplace = True)\n",
     "        df.loc[df[new_id].str.contains('nan'),new_id] = np.nan\n",
     "    # Removing test participants \n",
-    "    remove = ['050744', 'hdfghadgfh', 'LindaEngel', 'test', 'Test001', 'Test001a', 'test0011', 'test0012', 'test0013', 'test0014', 'test0015', 'test002', 'test00229', 'test007', 'test01', 'test012', 'test013', 'test1', 'test2', 'test4', 'test12', 'test999', 'test2021', 'test345345', 'testneu', 'testtest', 'test_0720', 'test_10', 'test_GA', 'Test_JH','test0016','891752080', 'pipingTest', 'test0001', 'test00012', 'test0012a', 'test0015a', 'test0017', 'test10', 'test20212', 'testJohn01', 'test_00213', 'test_00233', 'test_00271', 'test_003', 'test_004', 'test_11_26', 'Test_MS','898922899', 'tesst', 'test0002', 'test0908', 'test092384750398475', 'test43', 'test123', 'test1233', 'test3425', 'test123456', 'test1234567', 'testfu3', 'test_888', 'test_999', 'test_98375983745', 'Test_Übung']\n",
+    "    remove = ['050744', 'hdfghadgfh', 'LindaEngel', 'test', 'Test001', 'Test001a', 'test0011', 'test0012', 'test0013', 'test0014', 'test0015', 'test002', 'test00229', 'test007', 'test01', 'test012', 'test013', 'test1', 'test2', 'test4', 'test12', 'test999', 'test2021', 'test345345', 'testneu', 'testtest', 'test_0720', 'test_10', 'test_GA', 'Test_JH','test0016','891752080', 'pipingTest', 'test0001', 'test00012', 'test0012a', 'test0015a', 'test0017', 'test10', 'test20212', 'testJohn01', 'test_00213', 'test_00233', 'test_00271', 'test_003', 'test_004', 'test_11_26', 'Test_MS','898922899', 'tesst', 'test0002', 'test0908', 'test092384750398475', 'test43', 'test123', 'test1233', 'test3425', 'test123456', 'test1234567', 'testfu3', 'test_888', 'test_999', 'test_98375983745', 'Test_Übung','050335', 'test003', 'test02', 'test111', 'test1111', 'test1234']\n",
     "    df = df[~df.participant_id.astype(str).isin(remove)]\n",
     "    # Checking participant ids (to find new test participants)\n",
     "    bad_ids = df[~df.participant_id.apply(self.check_participant_id)].participant_id.unique()\n",
@@ -535,10 +535,12 @@
     "    # Setting dtypes based on codebook\n",
     "    df = self.set_dtypes(df, self.get_ba_codebook())\n",
     "    # Creating convenience variables\n",
-    "    df['is_female'] = df.screen_gender.replace({1:True,2:False})\n",
+    "    df['is_female'] = df.screen_gender.replace({1:0,2:1,3:np.nan})\n",
     "    # Filling in missings from baseline\n",
-    "    df['is_female'].fillna(df.bx_sozio_gender.replace({1:False,2:True}), inplace = True)\n",
+    "    df['is_female'].fillna(df.bx_sozio_gender.replace({1:0,2:1,3:np.nan}), inplace = True)\n",
     "    df['is_female'] = df.groupby('participant_id')['is_female'].transform(lambda x: x.ffill().bfill())\n",
+    "    df['is_female'] = df['is_female'].astype(float)\n",
+    "    \n",
     "    return df"
    ]
   },
@@ -560,7 +562,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preparing ba_data\n"
+      "Preparing ba_data\n",
+      "Values with wrong dtype in screen_aud_nogroup\n",
+      "Values with wrong dtype in screen_aud_sum\n"
      ]
     }
    ],
